--- a/package.json
+++ b/package.json
@@ -5,5 +5,13 @@
   "main": "index.js",
   "repository": "https://github.com/nurodev/worker-template.git",
   "author": "nurodev <ben@nuro.dev>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "hono": "^3.8.3"
+  },
+  "devDependencies": {
+    "@cloudflare/workers-types": "^4.20231016.0",
+    "typescript": "^5.2.2",
+    "wrangler": "^3.14.0"
+  }
 }
