--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-  "private": true,
-  "name": "worker-template",
-  "version": "1.1.1",
-  "main": "index.js",
-  "repository": "https://github.com/nurodev/worker-template.git",
-  "author": "nurodev <ben@nuro.dev>",
-  "license": "MIT",
-  "dependencies": {
-    "hono": "^3.8.3"
-  },
-  "devDependencies": {
-    "@cloudflare/workers-types": "^4.20231016.0",
-    "typescript": "^5.2.2",
-    "wrangler": "^3.14.0"
-  }
+	"private": true,
+	"name": "worker-template",
+	"version": "1.1.1",
+	"main": "index.js",
+	"repository": "https://github.com/nurodev/worker-template.git",
+	"author": "nurodev <ben@nuro.dev>",
+	"license": "MIT",
+	"scripts": {
+		"deploy": "wrangler deploy",
+		"dev": "wrangler dev",
+		"start": "wrangler dev"
+	},
+	"dependencies": {
+		"hono": "^3.8.3"
+	},
+	"devDependencies": {
+		"@cloudflare/workers-types": "^4.20231016.0",
+		"typescript": "^5.2.2",
+		"wrangler": "^3.14.0"
+	}
 }
