--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	},
 	"devDependencies": {
 		"@cloudflare/workers-types": "^4.20231016.0",
+		"prettier": "^3.0.3",
 		"typescript": "^5.2.2",
 		"wrangler": "^3.14.0"
 	}
