Added initial basic code formatting config

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"scripts": {
 		"deploy": "wrangler deploy",
 		"dev": "wrangler dev",
+		"format": "prettier --write '**/*.{ts,tsx}'",
 		"start": "wrangler dev"
 	},
 	"dependencies": {
